--- a/templates/myBlogs.html
+++ b/templates/myBlogs.html
@@ -1,7 +1,24 @@
 <h1>My Blog Posts</h1>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel-group">
+            <div class="col-md-3 col-sm-4 col-xs-12" ng-repeat="blog in userBlogs" style="height:214px;">
+                <div class="panel panel-default panel-primary">
+                    <div class="panel-heading">{{blog.title}}</div>
+                    <div class="panel-body" ng-bind-html="blog.content | htmlToPlainText | limitTo : 100"></div>
+                    <div class="panel-footer">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a class="btn btn-primary btn-sm" href="#/edit/{{blog._id}}">Edit Post</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="pull-right" href="#/view/{{blog._id}}">Read Now</a>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
